<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".ActivityQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCounts"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/textViewCounts" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:text="@string/textViewQuestion"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnChoice1"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/btnChoice1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnChoice2"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/btnChoice2"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnChoice3"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/btnChoice3"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnChoice4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btnChoice4"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:text="@string/btnNext"
            app:rippleColor="#03A9F4" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>